app_front/app/stylesheets/customer/components/_product-select.sass
+component(product-select)

  font-size: 1.2em

  & > span
    display: inline-block
    margin-right: 0.3em
    float: left
    font-size: 1.3em

  +part(quantity)
    margin-bottom: 1em
    width: 45%
    float: left
    height: 2.5em
    vertical-align: top

  +part(dropdown)
    margin-bottom: 1em
    width: 40%
    float: left
    height: 2.5em
    font-size: 0.8em

  +part(minus)
    height: 2.5em
    margin-bottom: 0.5em
    color: $color-light-grey

  +part(plus)
    height: 2.5em
    margin-bottom: 0.5em
    color: $color-light-grey

